# EmailAutomator

./: .env  .replit  PROJECT_SETUP.txt  SETUP.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted--usr-bin-env-python3-Langchain-MCP-Agent-for-LAS-file-analysis-This-script-uses-Langchain-with-1757336670257_1757336670429.txt  Pasted-The-above-error-occurred-in-the-LangchainQueryPanel-component-at-LangchainQueryPanel-https--1757344882018_1757344882019.txt  Pasted-Workflow-Overview-Extract-email-sender-and-body-Use-Python-s-built-in-email-library-or-tools-like--1756957896766_1756957896767.txt  Pasted-export-class-LLMService-private-endpoint-string-private-model-string-constructor--1757067425953_1757067426127.txt
client/src/: App.tsx  index.css
client/src/components/: ActivityLog.tsx  DirectQueryPanel.tsx  EmailConfig.tsx  LLMPanel.tsx  LangchainQueryPanel.tsx  MCPPanel.tsx  (+4 more)
data/: storage.json
langchain_scripts/: langchain_agent.py
mcp_resources/las_files/: development_well_05.las  exploration_well_04.las  offshore_well_03.las  production_well_02.las  sample_well_01.las
mcp_resources/scripts/: depth_visualization.py  gamma_ray_analyzer.py  lithology_classifier.py  porosity_calculator.py  resistivity_analyzer.py
mcp_servers/: depth_plotter_server.py  gamma_ray_server.py  langchain_agent.py  porosity_server.py  resources_server.py  scripts_server.py  tools_server.py
server/: routes.ts  storage.ts
server/services/: emailService.ts  langchainLlmService.ts  llmService.ts  mcpResourceService.ts  mcpService.ts
shared/: schema.ts
(+8 files in other folders)
